iteracion retoques seguridad y manejo de errores, optimizaciones incluido